[package]
name = "stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
actix-files = "0.6.5"
diesel = { version = "2.1.0", features = ["sqlite", "r2d2", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
ulid = "0.4"
maxminddb = "0.24.0"
log = "0.4"
env_logger = "0.9"