[package]
name = "stats"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.36.0", features = ["full", "macros"] }
actix-web = "4"
actix-cors = "0.7.0"
actix-files = "0.6.5"
diesel = { version = "2.1.0", features = ["sqlite", "r2d2", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
ulid = "0.4"
maxminddb = "0.24.0"
log = "0.4"
env_logger = "0.9"
woothee = "0.13.0"
regex = "1.10.3"
url = "2.5.0"
csv = "1.3"
once_cell = "1.19"
strsim = "0.11"

[profile.release]
codegen-units = 1
lto = "fat"